# AbsDropping

./: CMakeLists.txt  README.md  todo.txt
ExperimentConfigs/AbsDropping/: evalHighVarCAD.yml  evalHighVarNaive.yml  evalLowVarCAD.yml  evalLowVarNaive.yml  evalOGA.yml  evalTimeDrop.yml  mctsTuning.yml
include/: Arena.h
include/Agents/: RandomAgent.h
include/Agents/Oga/: OgaAbstractNodes.h  OgaAgent.h  OgaGroundNodes.h  OgaTree.h  OgaUtils.h
include/Games/: Gamestate.h
include/Games/MDPs/: AcademicAdvising.h  CooperativeRecon.h  EarthObservation.h  GameOfLife.h  Manufacturer.h  Navigation.h  RaceTrack.h  SailingWind.h  SkillsTeaching.h  SysAdmin.h  Tamarisk.h  Traffic.h  TriangleTireworld.h  Wildfire.h
include/Games/Wrapper/: FiniteHorizon.h
include/Utils/: MiscAnalysis.h  ValueIteration.h
python/: analyze_experiments.py  run_experiments.py  setup_experiments.py
resources/ManufacturerSetups/: 12_IPPC.txt  13_IPPC.txt  14_IPPC.txt
resources/TrafficModels/: example.txt
src/: Arena.cpp  main.cpp
src/Agents/Mcts/: MctsAgent.cpp
src/Agents/Oga/: OgaAbstractNodes.cpp  OgaAgent.cpp  OgaGroundNodes.cpp  OgaTree.cpp  OgaUtils.cpp
src/Games/MDPs/: AcademicAdvising.cpp  CooperativeRecon.cpp  EarthObservation.cpp  GameOfLife.cpp  Manufacturer.cpp  Navigation.cpp  RaceTrack.cpp  SailingWind.cpp  SkillsTeaching.cpp  SysAdmin.cpp  Tamarisk.cpp  Traffic.cpp  TriangleTireworld.cpp  Wildfire.cpp
src/Games/Wrapper/: FiniteHorizon.cpp
src/Utils/: MiscAnalysis.cpp  ValueIteration.cpp
